--- a/_data/messages.yml
+++ b/_data/messages.yml
@@ -5,8 +5,8 @@ locales:
   # English translation
   # -------------------
   en: &DEFAULT_EN
-    overview: "Overview"
-    toc: "Table of Contents"
+    overview: "Ülevaade"
+    toc: "Sisukord"
     written_by: "Written by"
     updated: "Updated"
     share: "Share on"
