--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,11 +3,11 @@
 - title: Avaleht
   url: /
 
-- title: Registreeri
-  url: /getting-started/
+- title: Millal pöörduda?
+  url: /millal-poorduda/
 
 - title: Meist
-  url: /about/
+  url: /meist/
 
 - title: Tingimused
-  url: /terms/
+  url: /tingimused/
