--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: "Kõnekoda"
 description: "Abiks kõnele ja sellega seotud asjadele."
 logo: 120x120.gif
 teaser: 400x250.gif
-locale: en_US
-url: "https://tarmoniine.github.io/skinny-bones/"
+locale: en
+url: "https://tarmoniine.github.io/konekoda/"
 feed:
   path: atom.xml
 
