--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,15 +6,15 @@ billy_rick:
   email: billy@rick.com
   bio: "What do you want, jewels? I am a very extravagant man."
   avatar: bio-photo.jpg
-  twitter: extravagantman
-  google:
-    plus: +BillyRick
 
 cornelius_fiddlebone:
   name: Cornelius Fiddlebone
   email: cornelius@thewhip.com
   bio: "I ordered what?"
   avatar: bio-photo.jpg
-  twitter: rhymeswithsackit
-  google:
-    plus: +CorneliusFiddlebone
+
+kirja_tsura:
+  name: Kirja Tsura
+  email: kirja@tsura.ee
+  bio: "Ma kirjutan palju"
+  avatar: bio-photo.jpg
