--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -3,11 +3,5 @@
 - title: Avaleht
   url: /
 
-- title: Millal pöörduda?
-  url: /millal-poorduda/
-
-- title: Meist
-  url: /meist/
-
-- title: Tingimused
-  url: /tingimused/
+- title: Kontakt
+  url: /kontakt/
