--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,20 +2,20 @@
 
 - title: Meist
   url: /meist/
-  image: 400x250.gif
+  image: lill1.jpg
 
 - title: Millal pöörduda?
   url: /millal-poorduda/
-  image: 400x250.gif
+  image: lill2.jpg
 
 - title: Nõuanded
   url: /nouanded/
-  image: 400x250.gif
+  image: lill3.jpg
 
 - title: Teenused ja hinnakiri
   url: /teenused-hinnakiri/
-  image: 400x250.gif
+  image: rand1.jpg
 
 - title: Kontakt
   url: /kontakt/
-  image: 400x250.gif
+  image: raekoda.jpg
